--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 		"target": "es5",
 		"types": ["node"],
 		"typeRoots": ["node_modules/@types", "./lib"],
-		"lib": ["es2017"]
+		"lib": ["es2017",
+			"dom"]
 	}
 }
