--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
 		"doc": "typedoc --out docs src --excludeNotExported"
 	},
 	"dependencies": {
-		"@types/jasmine": "^3.3.4",
-		"@types/node": "^10.12.18",
-		"jasmine": "^3.3.1"
+		"@types/jasmine": "^3.3.13",
+		"@types/node": "^10.14.7",
+		"jasmine": "^3.4.0"
 	},
 	"main": "./index.js",
-	"types": "./index.d.ts",
-	"devDependencies": {
-		"ts-node": "^7.0.1",
-		"typedoc": "^0.13.0"
-	}
+	"types": "./index.d.ts"
 }
